# pub-stomper-1600

./: CMakeLists.txt  README.md  board.cpp  design.txt  main.cpp  piece.cpp
include/: bitboard.h  board.h  constants.h  evaluate.h  move.h  movegen.h  movetable.h
src/: bitboard.cpp  board.cpp  constants.cpp  evaluate.cpp  main.cpp  move.cpp  movegen.cpp  movetable.cpp
